--- a/process/css/sections/_people.css
+++ b/process/css/sections/_people.css
@@ -36,6 +36,11 @@ $background-color-people: color($yellow shade(5%));
                 width: calc($item-width/3 - 1.5rem);
             }
             .card-info {
+                @media $mobile {
+                  br {
+                    display: none;
+                  }
+                }
                 background: color($orange alpha(50%));
                 padding: 3% 7%;
                 .card-name {
